Restrict number of output directories to up to 1
